objects/Credit_Memo__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PureCloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage - Cloud</fullName>
                </value>
                <value>
                    <fullName>PureEngage - Cloud Monthly Billing</fullName>
                </value>
                <value>
                    <fullName>PureEngage - On Premise</fullName>
                </value>
                <value>
                    <fullName>PureConnect Subscription - Burst</fullName>
                </value>
                <value>
                    <fullName>PureConnect Subscription - Hardware</fullName>
                </value>
                <value>
                    <fullName>PureEngage Subscription</fullName>
                </value>
                <value>
                    <fullName>PureConnect Subscription</fullName>
                </value>
                <value>
                    <fullName>PS BU Central</fullName>
                </value>
                <value>
                    <fullName>PureConnect - Cloud</fullName>
                </value>
                <value>
                    <fullName>PureConnect - On Premise</fullName>
                </value>
                <value>
                    <fullName>- Hardware</fullName>
                </value>
                <value>
                    <fullName>AppFoundry</fullName>
                </value>
                <value>
                    <fullName>Blank/No Value</fullName>
                </value>
                <value>
                    <fullName>Non-Revenue</fullName>
                </value>
                <value>
                    <fullName>Premier Edition</fullName>
                </value>
                <value>
                    <fullName>PS BU Canada</fullName>
                </value>
                <value>
                    <fullName>PS BU CEE</fullName>
                </value>
                <value>
                    <fullName>PS BU DACH</fullName>
                </value>
                <value>
                    <fullName>PS BU East</fullName>
                </value>
                <value>
                    <fullName>PS BU France &amp; NA</fullName>
                </value>
                <value>
                    <fullName>PS BU Government</fullName>
                </value>
                <value>
                    <fullName>PS BU Iberia</fullName>
                </value>
                <value>
                    <fullName>PS BU Italy</fullName>
                </value>
                <value>
                    <fullName>PS BU ME</fullName>
                </value>
                <value>
                    <fullName>PS BU North</fullName>
                </value>
                <value>
                    <fullName>PS BU SEI</fullName>
                </value>
                <value>
                    <fullName>PS BU UKI</fullName>
                </value>
                <value>
                    <fullName>PS BU West</fullName>
                </value>
                <value>
                    <fullName>PS CU Asean and EMG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CM_Reason_Description_PB__c</fullName>
        <label>CM Reason Description</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This is a credit for missing or incomplete tax certificates at the time of invoicing.</fullName>
                </value>
                <value>
                    <fullName>This credit is due to the part number being set up incorrectly, resulting in a taxation error.</fullName>
                </value>
                <value>
                    <fullName>The order was placed with an incorrect ship to address, which resulted in inproper taxation.</fullName>
                </value>
                <value>
                    <fullName>Tax calculated incorrectly by the tax engine (Avalara, SureTax) or manual error.</fullName>
                </value>
                <value>
                    <fullName>Incorrect pricing was entered on the quote, resulting in credit.</fullName>
                </value>
                <value>
                    <fullName>Incorrect parts and/or quantity were entered on the quote, resulting in credit.</fullName>
                </value>
                <value>
                    <fullName>Incorrect currency was entered on the quote, resulting in credit.</fullName>
                </value>
                <value>
                    <fullName>Incorrect sold to and/or end user were entered on the quote, resulting in credit.</fullName>
                </value>
                <value>
                    <fullName>Incorrect billing entity was entered on the quote, resulting in credit.</fullName>
                </value>
                <value>
                    <fullName>Incorrect net payment terms were entered on the quote, which triggers a necessary change on the SO, requiring a credit &amp; rebill.</fullName>
                </value>
                <value>
                    <fullName>Billing errors set up as a result of incorrect set up of billing schedules; incorrect submission of prepaid hours by PS or GU; any other invalid billing processing event.</fullName>
                </value>
                <value>
                    <fullName>A sales order was placed more than once, resulting in multiple invoices.</fullName>
                </value>
                <value>
                    <fullName>An order was placed with contract terms and conditions that were outside of what Genesys deems as standard, resulting in a billing error.</fullName>
                </value>
                <value>
                    <fullName>Terms and Conditions of a contract were modified after the initial contract execution, affecting revenue.</fullName>
                </value>
                <value>
                    <fullName>These are open balances that collections determines are not economically viable to pursue or are uncollectible due to bankruptcy, disputes or inability to contact.</fullName>
                </value>
                <value>
                    <fullName>This is a business decision to extend a customer&apos;s start date due to implementation, product issues or customer expectations.</fullName>
                </value>
                <value>
                    <fullName>This is a sales and CSM approved credit related to product functionality issues or general customer service issues</fullName>
                </value>
                <value>
                    <fullName>This is specific to disputes related to professional services SOW, hours, performance, etc.</fullName>
                </value>
                <value>
                    <fullName>This is a one-off credit due to failure to meet agreed performance commitments/system availability as per contract.</fullName>
                </value>
                <value>
                    <fullName>The customer terminated their contract with Genesys for a particular contract, resulting in a credit.</fullName>
                </value>
                <value>
                    <fullName>This is monies owed to the customer based on contractual incentives including sales rebate incentives.</fullName>
                </value>
                <value>
                    <fullName>This is a formal legal agreement reached between the customer and Genesys to settle unresolved disputes, resulting in a credit.</fullName>
                </value>
                <value>
                    <fullName>This is a credit used to satisfy partner sales incentives.</fullName>
                </value>
                <value>
                    <fullName>This is a credit due to a customer outside of the US due to that particular regions taxation laws.</fullName>
                </value>
                <value>
                    <fullName>Incorrect or invalid master data resulting in wrong part, price, billing address, CCDB data, or customer account information.</fullName>
                </value>
                <value>
                    <fullName>Incorrect or invalid billing as a result of inaccurate terms &amp; conditions, agreements, or concessions incurred during the customer&apos;s migration to our Cloud offering.</fullName>
                </value>
                <value>
                    <fullName>This is a discount or series of discounts in the price paid for the Cloud products during a specificied period of time per contract</fullName>
                </value>
                <value>
                    <fullName>This is a refund of unconsumed Prem Maintenance (GenCare) charges due to users converting to the Cloud platform; this is a one time credit intended to deliver in month RAMP + 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collection_Manager_Approved_Date__c</fullName>
        <label>Collection Manager Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Collection_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collection Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Amount_NU__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount_NotUsed</label>
        <summarizedField>Credit_Memo_Line_Item__c.Credit_Amount__c</summarizedField>
        <summaryForeignKey>Credit_Memo_Line_Item__c.Credit_Memo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Credit_Full_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Full Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Details__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+Id, Name,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Memo Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Type__c</fullName>
        <label>Credit Memo Reason Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>bankruptcy</fullName>
                    <isActive>false</isActive>
                    <label>bankruptcy</label>
                </value>
                <value>
                    <fullName>Billing Error – System/Price</fullName>
                    <isActive>false</isActive>
                    <label>Billing Error – System/Price</label>
                </value>
                <value>
                    <fullName>Billing Plan Error</fullName>
                    <isActive>false</isActive>
                    <label>Billing Plan Error</label>
                </value>
                <value>
                    <fullName>Business - Cloud Migrations (Incentive Credit)</fullName>
                </value>
                <value>
                    <fullName>Business - Cloud Migrations (Maintenance Credit)</fullName>
                </value>
                <value>
                    <fullName>Business - Contract Amendment</fullName>
                </value>
                <value>
                    <fullName>Business - Contractual Owed Credit</fullName>
                </value>
                <value>
                    <fullName>Business - Customer Cancellation</fullName>
                </value>
                <value>
                    <fullName>Business - Customer Dissatisfaction</fullName>
                </value>
                <value>
                    <fullName>Business - Foreign Tax WH</fullName>
                </value>
                <value>
                    <fullName>Business - Professional Services Concession</fullName>
                </value>
                <value>
                    <fullName>Business - Ramp Extension</fullName>
                </value>
                <value>
                    <fullName>Business - Referral</fullName>
                </value>
                <value>
                    <fullName>Business - Settlement</fullName>
                </value>
                <value>
                    <fullName>Business - SLA</fullName>
                </value>
                <value>
                    <fullName>Business - Write Off/Bad Debt</fullName>
                </value>
                <value>
                    <fullName>Concession</fullName>
                    <isActive>false</isActive>
                    <label>Concession</label>
                </value>
                <value>
                    <fullName>Contract Related T&amp;C</fullName>
                    <isActive>false</isActive>
                    <label>Contract Related T&amp;C</label>
                </value>
                <value>
                    <fullName>Data Entry Error</fullName>
                    <isActive>false</isActive>
                    <label>Data Entry Error</label>
                </value>
                <value>
                    <fullName>Duplicate Invoices</fullName>
                    <isActive>false</isActive>
                    <label>Duplicate Invoices</label>
                </value>
                <value>
                    <fullName>Foreign Tax</fullName>
                    <isActive>false</isActive>
                    <label>Foreign Tax</label>
                </value>
                <value>
                    <fullName>IT Issue</fullName>
                    <isActive>false</isActive>
                    <label>IT Issue</label>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                    <isActive>false</isActive>
                    <label>Maintenance</label>
                </value>
                <value>
                    <fullName>Mis-Quote/Sales</fullName>
                    <isActive>false</isActive>
                    <label>Mis-Quote/Sales</label>
                </value>
                <value>
                    <fullName>Order Error - Cloud Migrations</fullName>
                    <isActive>false</isActive>
                    <label>Order Error - Cloud Migrations</label>
                </value>
                <value>
                    <fullName>Order Error - Duplicate</fullName>
                </value>
                <value>
                    <fullName>Order Error - Incorrect Billing Processing</fullName>
                </value>
                <value>
                    <fullName>Order Error - Incorrect Parts/Qty</fullName>
                </value>
                <value>
                    <fullName>Order Error - Incorrect Pricing</fullName>
                </value>
                <value>
                    <fullName>Order Error - Master Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Type__c</fullName>
        <label>Credit Memo Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Debit Memo</fullName>
                </value>
                <value>
                    <fullName>Credit/Rebill</fullName>
                </value>
                <value>
                    <fullName>Credit/Debook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Qtr_Revenue_Impact__c</fullName>
        <label>Current Qtr Revenue Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Name_End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name (End User)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name_Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Name (Sold To)</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Credit_Memos_Sold</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Credit_Amount__c</fullName>
        <description>If Sales Order is not required</description>
        <label>Direct  Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Draft Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Customer_Region__c</fullName>
        <formula>Customer_Name_End_User__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Credit_Amount__c</fullName>
        <formula>if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c, Direct_Credit_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Credit_Amount_converted__c</fullName>
        <formula>IF(ISPICKVAL(Currency__c,&quot;AUD&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;AUD&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;AUD&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;BRL&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;BRL&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;BRL&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;CAD&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;CAD&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;CAD&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;EUR&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;EUR&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;EUR&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;GBP&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;GBP&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;GBP&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;JPY&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;JPY&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;JPY&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;NZD&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;NZD&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;NZD&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;SGD&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;SGD&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;SGD&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;USD&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;USD&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;USD&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;VEF&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;VEF&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;VEF&quot;)), 
IF(ISPICKVAL(Currency__c,&quot;ZAR&quot;),if(Credit_Amount_NU__c &gt; 0,Credit_Amount_NU__c / CURRENCYRATE(&quot;ZAR&quot;),Direct_Credit_Amount__c / CURRENCYRATE(&quot;ZAR&quot;)), 
0)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Credit Amount(converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Approved_Date__c</fullName>
        <label>Finance Manager Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finance_Manager_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Manager Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Info_Reason__c</fullName>
        <label>More Info Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_CM_Number__c</fullName>
        <label>NS CM Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Debook_Number__c</fullName>
        <label>NS Debook Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NS_Sales_Order__c</fullName>
        <label>NS Sales Order#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Amount1__c</fullName>
        <label>Original Amount</label>
        <summarizedField>Credit_Memo_Line_Item__c.Original_Amount__c</summarizedField>
        <summaryForeignKey>Credit_Memo_Line_Item__c.Credit_Memo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Original_Amount_NU__c</fullName>
        <label>Original Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Amount__c</fullName>
        <label>Original Amount_NotUsed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Memo_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ready_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Considered for approval only if it is checked</description>
        <inlineHelpText>Considered for approval only if it is checked</inlineHelpText>
        <label>Ready for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Credit__c</fullName>
        <label>Reason for Credit</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rebill_Amount1__c</fullName>
        <formula>Original_Amount1__c -  Credit_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rebill Amount Not Uesd1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebill_Amount2__c</fullName>
        <label>Rebill Amount_NotUsed</label>
        <summarizedField>Credit_Memo_Line_Item__c.Rebill_Amount__c</summarizedField>
        <summaryForeignKey>Credit_Memo_Line_Item__c.Credit_Memo__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rebill_Amount_NU__c</fullName>
        <label>Rebill Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebill_Amount__c</fullName>
        <label>Rebill Amount No Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebill_Invoice_Amount__c</fullName>
        <label>Rebill Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebill_Invoice__c</fullName>
        <label>Rebill Invoice#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebill_Sales_Order__c</fullName>
        <label>Rebill Sales Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Credit_Memos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Accountant_Approved_Date__c</fullName>
        <label>Revenue Accountant Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Accountant_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Accountant Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Comments_Instructions__c</fullName>
        <label>Revenue Comments &amp; Instructions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue_Hold_to_Release__c</fullName>
        <label>Revenue Hold to Release</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause_Description__c</fullName>
        <formula>IF( ISPICKVAL( Root_Cause__c , &apos;OM Clerical&apos;) , &apos;This classification is for an error caused by OM processing mistakes not linked to system or product gaps.&apos;, NULL)&amp; 
IF( ISPICKVAL( Root_Cause__c , &apos;AE Input&apos;) , &apos;This classification is for incorrect data entry or wrong/incomplete information submitted by upstream AE/opportunity owner.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;GenCare Input&apos;) , &apos;This classification is for incorrect data entry or wrong/incomplete information submitted by upstream GenCare.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;IT System&apos;) , &apos;This classification is for an IT system failure, including network outages and failures from core/peripheral systems.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;Product&apos;) , &apos;This classification is for Product usage data errors, feature functionality gaps, performance or outages related to our Product.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;PS Input&apos;) , &apos;This classification is for incorrect data entry or wrong/incomplete information submitted by upstream Professional Services.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;GU Input&apos;) , &apos;This classification is for incorrect data entry or wrong/incomplete information submitted by upstream Genensys University.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;A/R Management&apos;) , &apos;This classification is for lack of collection performance or correction of misapplied customer payments.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;Customer Success Management&apos;) , &apos;This classification is for incomplete tracking in the customers life cycle or management/decisioning of the customer relationship i.e. ramp extensions, cancellations, onboarding requirements, and general cost of doing business decisions.&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;Sales Management&apos;) , &apos;This will include items included in the original contract i.e; rebates, sales incentive, SLA, etc. or any amendments after the initial billing or non-contractual sales commitments or invalid master data&apos;, NULL)&amp;
IF( ISPICKVAL( Root_Cause__c , &apos;M&amp;A Integration&apos;) , &apos;This classification is for invoices that migrated from an acquired company.&apos;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Root Cause Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A/R Management</fullName>
                </value>
                <value>
                    <fullName>AE Input</fullName>
                </value>
                <value>
                    <fullName>Cloud Migrations</fullName>
                    <isActive>false</isActive>
                    <label>Cloud Migrations</label>
                </value>
                <value>
                    <fullName>CODB</fullName>
                    <isActive>false</isActive>
                    <label>CODB</label>
                </value>
                <value>
                    <fullName>Customer Success Management</fullName>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                    <isActive>false</isActive>
                    <label>Data Management</label>
                </value>
                <value>
                    <fullName>GenCare Input</fullName>
                </value>
                <value>
                    <fullName>GU Input</fullName>
                </value>
                <value>
                    <fullName>IT System</fullName>
                </value>
                <value>
                    <fullName>M&amp;A Integration</fullName>
                </value>
                <value>
                    <fullName>OM Clerical</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>PS Input</fullName>
                </value>
                <value>
                    <fullName>Sales Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Sales_Order1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Sales Order#</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Order__c.Sold_To_Name__c</field>
                <operation>equals</operation>
                <valueField>$Source.Customer_Name_Sold_To__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Credit Memo New</relationshipLabel>
        <relationshipName>Credit_Memo_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Sales Order#_Not Used</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Credit Memo New</relationshipLabel>
        <relationshipName>Credit_Memo_New</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_NS_Customer__c</fullName>
        <label>Sold To NS Customer#</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
                <value>
                    <fullName>More Info Needed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved - Pending CreditMemo</fullName>
                </value>
                <value>
                    <fullName>Awaiting Rebill</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>